# inspector

./: CMakeLists.txt  inspector.service
src/: handler.cc  handler.hh  info.cc  info.hh  inspector.cc  inspector.hh  main.cc
src/handlers/: app.cc  app.hh  appimage.cc  appimage.hh  font.cc  font.hh  icon.cc  icon.hh  theme.cc  theme.hh
